--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,6 +5,7 @@
     top: 0;
     background-color: rgb(59, 59, 59);
     flex-direction: column;
+    margin-top: 0;
 
 }
 
@@ -70,4 +71,8 @@
     font-size: 20px;
     font-weight: bold;
     color: white;
+}
+
+.Ul__li:hover{
+    transform:scale(1.3);
 }
