--- a/src/styles/Historia.css
+++ b/src/styles/Historia.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     min-width: 100vw;
+    background-image: url(../assets/imagenes/nacional.gif);
 }
 
 .Historia__2 {
@@ -21,8 +22,39 @@
     text-align: center;
     font-size: 50px;
     margin-bottom: 0;
+    color: white;
+}
+
+#pp, #po {
+    font-weight:500;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: white;
 }
 
 #h2 {
+    text-align:left;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0;
+    font-size: 20px;
+    color: white;
+}
+
+#p {
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    color: white;
+}
+
+#imag img {
+    width: 300px;
+    height: 300px;
+    margin-left: 15px;
+}
+
+#imag {
     text-align: center;
+    margin-bottom: 40px;
 }
