--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -19,9 +19,20 @@ body{
     gap: 40px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
+
 }
 
 .NavBar__Img {
     height: 100px;
     width:100px;   
 }
+
+.link {
+    text-decoration: none;
+    color: white;
+}
+
+.Ul__Li:hover{
+    transform:scale(1.1);
+}
+
